# MXtalTools

./: .gitignore  .gitmodules  .readthedocs.yaml  CSG_predictor.py  LICENSE  MANIFEST.in  README.md  STUN_MC.py  bash_sub.sh  best_regressor_test_stats_dict.npy  crystal_builder_tools.py  crystal_modeller.py  dataset_utils.py  install_requirements.sh  install_requirements_ccdc.sh  main.py  mkdocs.yml  model_utils.py  molcrytools-env.yml  mxtaltools-env-simple-cpu.yaml  mxtaltools-env.yaml  old_predictor_repo.py  pyproject.toml  run_sweep.py  standalone_cell_builder.py  supercell_builders.py  symmetry_info.npy  update_dist.sh  utils.py
autoencoder/: ae_models.py  configs.py  dev_configs.py  main_autoencoder.py  new_autoencoder.py  new_autoencoder_utils.py  old.py  reporting.py  utils.py
bulk_molecule_classification/: NICOAM_constants.py  classifier_dataset_prep.py  classifier_main.py  classifier_workflows.py  dataset_prep.py  dev_configs.py  dump_data_processing.py  mol_classifier.py  multi_run_analysis.py  ovito_utils.py  paper1_figs.py  paper1_figs_utils.py  toy_MIC_radial.py  traj_analysis_figs.py  utils.py  workflows.py
checkpoints/: crystal_score.pt
classify_lammps_trajs/: NICOAM_constants.py  dev_configs.py  dump_data_processing.py  eval_configs.py  model_ckpt  mol_classifier.py  multi_run_analysis.py  num_convs_configs.py  ovito_utils.py  process_lammps_dumps.py  process_lammps_dumps2.py  test_configs.py  test_configs_1.py  traj.xyz  traj_analysis_figs.py  utils.py  workflows.py
common/: ase_interface.py  config_processing.py  dump_data_processing.py  geometry_calculations.py  mol_classifier_utils.py  ovito_utils.py  rdf_calculation.py  space_group_reference.py  utils.py
configs/: aug9_01.yaml  aug9_02.yaml  aug9_03.yaml  aug9_04.yaml  aug9_05.yaml  aug9_06.yaml  aug9_07.yaml  aug9_08.yaml  d_test_1.yaml  d_test_2.yaml  dev.yaml  gflownet_dev.yaml  july16_10.yaml  july16_2.yaml  july16_3.yaml  july16_4.yaml  july16_5.yaml  july16_6.yaml  july16_7.yaml  july16_8.yaml  july16_9.yaml  may31_1.yaml  may31_2.yaml  may31_3.yaml  mol_classifier_configs.py  oct25_01.yaml  oct25_04.yaml  oct25_05.yaml  oct7_10.yaml  oct7_12.yaml  oct7_15.yaml  oct7_18.yaml  oct7_19.yaml  oct7_21.yaml  oct7_3.yaml  oct7_5.yaml  oct7_6.yaml  oct7_7.yaml  oct7_8.yaml  oct7_9.yaml  (+11 more)
constants/: asymmetric_units.py  atom_properties.py  classifier_constants.py  space_group_feature_tensor.py  space_group_info.py  space_group_reference.py
crystal_building/: builder.py  coordinate_transformations.py  crystal_builder_tools.py  supercell_builders.py  utils.py  utils_np.py
csp/: MCMC_Sampling.py  SampleOptimization.py  crystal_search.py  utils.py
dataset_management/: CSD_data_manager.py  CSD_query.py  CrystalData.py  builder.py  cif_processor.py  dataloader_utils.py  dataset_builder.py  dataset_manager.py  dataset_utils.py  featurization_utils.py  featurize_crystal_data.py  inversion_games.py  lammps_traj_utils.py  load_lmdb.py  manager.py  modelling_utils.py  molecule_featurizer.py  parse_CIFs.py  process_BT_5_filenames.py  process_lammps_dumps.py  random_crystal_builder.py  sdf_processor.py  standard_dataDims.npy  utils.py  visualizer.py  xyz_processor.py
docs/: README.md  conf.py  docs_notes.md  index.rst  rebuild_docs.sh  requirements.txt
examples/: crystal_analysis.py  crystal_density_prediction.py  crystal_search.py  crystal_search_pretty.py  crystal_search_reporting.py  molecule_autoencoder.py  mxt_graphic.py  old_crystal_search.py  old_crystal_search_pretty.py  print_supported_sgs.py  timing_benchmark.py
installation_scripts/: mxtaltools-env.yaml  ovito_torch.yaml  requirements.txt
mini_datasets/: mini_CSD_dataset.pt  mini_pd_dataset_sg1_test.pt  mini_qm9_dataset.pt  mini_qm9s_dataset.pt
misc/: JCIM_example_text.py  JCIM_example_text.txt  bash_sub.sh  fit_gmm.py  install_requirements.sh  make_unit_cell.py  supercell_builder_test1.py
models/: CustomSchNet.py  DimeNetCustom.py  GraphNeuralNetwork.py  MikesGraphNet.py  asymmetric_radius_graph.py  autoencoder.pt  autoencoder_model.py  autoencoder_models.py  base_models.py  bases.py  basis_functions.py  cell_generation_analysis.py  components.py  cp_regressor.pt  crystal_discriminator.pt  crystal_rdf.py  crystal_score.pt  discriminator_models.py  embedding_regression_models.py  equivariant_TransformerConv.py  flow_utils.py  generator_models.py  global_aggregation.py  globalaggregation.py  gnn_blocks.py  model_components.py  model_utils.py  old.py  point_cloud_autoencoder.py  positional_encodings.py  regression_models.py  sphere_embedding.py  torch_models.py  utils.py  vdw_overlap.py  vector_LayerNorm.py
mxtaltools/: doc_test.py  modeller.py
mxtaltools/standalone/autoencoder/Mo3ENet/: LICENSE  MANIFEST.in  pyproject.toml
mxtaltools/standalone/autoencoder/Mo3ENet/Mo3ENet/: CrystalData.py  __init__.py  models.py  utils.py
mxtaltools/standalone/autoencoder/Mo3ENet/Mo3ENet/constants/: asymmetric_units.py  prior_stds.npy  space_group_feature_tensor.py  space_group_info.py
new_dataset_management/: cif_processor.py  dump_CSD.py  featurization_utils.py  manager.py  modelling_utils.py
new_dataset_manager/: builder.py  cif_processor.py  featurization_utils.py  manager.py  molecule_featurizer.py  new_manager.py
nflib/: flows.py  nets.py  spline_flows.py
nikos/: calculate_atomic_and_molecular_properties.py  calculate_molecular_positions.py  calculate_molecular_rotations.py  coor_trans.py  coordinate_transformations.py  generate_supercell.py  identify_close_contacts.py  perpendicular_vectors.py  plane_vector_transformation.py  rotations.py  structure_generator.py  symmetry_operations.py
old/: DimeNetCustom.py  MCMC_Sampling.py  autoencoder_model.py  cell_generation_analysis.py  compare_cif_readers.py  crystal_discriminator.py  flow_models.py  inversion_games.py  old_models.py  playing_with_rotation.py  point_cloud_autoencoder.py  pyxtal_test.py  random_crystal_builder.py  standalone_cell_builder.py
reporting/: AE_diagrams.py  dataset_analysis.py  logger.py  nov_22_discriminator.py  nov_22_discriminator_final.py  online.py  (+1 more)
(+5959 files in other folders)
