# WORK IN PROGRESS
[tool.poetry]
name = "mxtaltools"
version = "0.1.0"
description = "MXtalTools: Molecular Crystals Machine Learning Toolkit"
authors = ["Michael Kilgour <mjakilgour@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: BSD-3",
    "Operating System :: Windows, Linux",
]

[tool.poetry.urls]
"repository" = "https://github.com/InfluenceFunctional/MXtalTools"
"issues" = "https://github.com/InfluenceFunctional/MXtalTools/issues"
"documentation" = "https://mxtaltools.readthedocs.io/en/latest/index.html"

# NOTE pip installation with poetry shell DOES NOT WORK
[tool.poetry.dependencies]
python = ">=3.9"
ase=">=3.22.1"
kaleido=">=0.2.1"
matplotlib="*"
numpy="*"
pandas=">=2.1.1"
pathtools=">=0.1.2"
Pillow=">=10.0.1"
plotly=">=5.17.0"
PyYAML=">=6.0.1"
scikit-learn=">=1.2.2"
scipy=">=1.11.3"
torch=">=2.1.0"
torch_geometric=">=2.4.0"
tqdm="*"
umap-learn=">=0.5.5"
wandb=">=0.15.12"

# NOTE may have to set custom cuda dependencies
torch-scatter = ">=2.1.2"#+pt20cu118"
torch-sparse = ">=0.6.18"#+pt20cu118"
torch-cluster = ">=1.6.3"#+pt20cu118"

pytest = { version = ">=7.4.2", optional = true }
#
#[tool.poetry.source]
#name = "cu118"
#url = "https://data.pyg.org/whl/torch-2.0.1+cu118.html"
#priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

