[tool.poetry]
name = "mxtaltools"
version = "0.1.0"
description = "MXtalTools: Molecular Crystals Machine Learning Toolkit"
authors = ["Michael Kilgour <mjakilgour@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Windows :: Linux",
]
include=["tests/**"]

[tool.poetry.urls]
"repository" = "https://github.com/InfluenceFunctional/MXtalTools"
"issues" = "https://github.com/InfluenceFunctional/MXtalTools/issues"
"documentation" = "https://mxtaltools.readthedocs.io/en/latest/index.html"

[tool.poetry.scripts]
test = "pytest"

[tool.poetry.dependencies]
python = ">=3.9"
ase=">=3.22.1"
kaleido=">=0.2.1"
matplotlib="*"
numpy="*"
pandas=">=2.1.1"
pathtools=">=0.1.2"
Pillow=">=10.0.1"
plotly=">=5.17.0"
PyYAML=">=6.0.1"
scikit-learn=">=1.2.2"
scipy=">=1.11.3"
tqdm="*"
umap-learn=">=0.5.5"
wandb=">=0.15.12"
rdkit=">=2024.03.5"
#csd-python-api="*"
pytest=">=7.4.2"

#[tool.poetry.sources]
#ccdc = { url = "https://pip.ccdc.cam.ac.uk/", priority = "supplemental" }

## NOTE have to set custom cuda dependencies
#torch=">=2.1.0"
#torch_geometric=">=2.4.0"

#torch-scatter = ">=2.1.2"#+pt20cu118"
#torch-sparse = ">=0.6.18"#+pt20cu118"
#torch-cluster = ">=1.6.3"#+pt20cu118"
#pynvml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

