[tool.poetry]
name = "mxtaltools"
version = "0.1.0"
description = "MXtalTools: Molecular Crystals Machine Learning Toolkit"
authors = ["Michael Kilgour <mjakilgour@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]
include = [
    "LICENSE",
    "README.md",
    "main.py",
    "mxtaltools/**/*.py",
    "mxtaltools/**/*.yaml",
    "configs/**/*.yaml",
    "misc/**/*.py",
    "tests/**/*.py",
]
exclude = [
    "**/old/**",
    "**/*.model",
    "**/*.pt",
]

[tool.poetry.urls]
"repository" = "https://github.com/InfluenceFunctional/MXtalTools"
"issues"     = "https://github.com/InfluenceFunctional/MXtalTools/issues"
"documentation" = "https://mxtaltools.readthedocs.io/en/latest/index.html"

# ---------------------------------------------------------------------------
# NOTE: PyTorch, PyTorch Geometric, and their C extensions (torch-scatter,
# torch-sparse, torch-cluster, pyg_lib, torch_spline_conv) must be installed
# manually before running `pip install mxtaltools`, because the correct
# wheels depend on your CUDA version.  See the Installation docs for the
# exact commands.
# ---------------------------------------------------------------------------

[tool.poetry.dependencies]
python = ">=3.9"

# Scientific stack
numpy        = "*"
scipy        = ">=1.11.3"
pandas       = ">=2.1.1"
numba        = "*"
scikit-learn = ">=1.2.2"
scikit-image = "*"
networkx     = "*"

# Molecular / crystal utilities
ase   = ">=3.22.1"
rdkit = ">=2024.03.5"

# ML utilities
einops  = "*"
msgpack = "*"
POT     = "*"          # Python Optimal Transport

# Visualisation & reporting
matplotlib = "*"
plotly     = ">=5.17.0"
kaleido    = ">=0.2.1"
seaborn    = "*"
Pillow     = ">=10.0.1"
tqdm       = "*"

# Config / IO
PyYAML    = ">=6.0.1"
pathtools = ">=0.1.2"

# Experiment tracking & testing
wandb  = ">=0.15.12"
pytest = ">=7.4.2"

# Optional: CSD Python API (requires a valid CCDC licence)
# csd-python-api = "*"

[tool.poetry.extras]
# Install UMA model support with:  pip install mxtaltools[uma]
uma = ["fairchem-core"]

[tool.poetry.dependencies.fairchem-core]
version  = "*"
optional = true

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
